[test/#14]: test code 수정 - && 제거 - assertThat 활용 - Collections 대신 List.of 로 변경 - 타이머를 처음 조회하는 테스트에서 findByDateAndMemberId 추가