@@ -1,5 +1,6 @@
 package com.woohaengshi.backend.service;
 
+import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.BDDMockito.given;
 
@@ -18,11 +19,11 @@ import com.woohaengshi.backend.support.fixture.MemberFixture;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
@@ -32,6 +33,7 @@ public class SubjectServiceTest {
     @Mock private MemberRepository memberRepository;
     @Mock private StudyRecordRepository studyRecordRepository;
     @Mock private SubjectRepository subjectRepository;
+    @InjectMocks private SubjectServiceImpl subjectService;
 
     @Test
     void 타이머를_조회_한다() {
@@ -40,7 +42,7 @@ public class SubjectServiceTest {
         int todayStudyTime = 30;
         Subject subject = Subject.builder().id(1L).name("HTML").member(member).build();
         ShowSubjectsResponse subjectResponse =
-                new ShowSubjectsResponse(subject.getId(), subject.getName());
+                ShowSubjectsResponse.of(subject.getId(), subject.getName());
 
         given(memberRepository.existsById(member.getId())).willReturn(true);
         given(subjectRepository.findAllByMemberIdOrderByNameAsc(member.getId()))
@@ -48,66 +50,54 @@ public class SubjectServiceTest {
         given(studyRecordRepository.findByDateAndMemberId(todayDate, member.getId()))
                 .willReturn(Optional.of(new StudyRecord(1L, todayStudyTime, todayDate, null)));
 
-        SubjectServiceImpl subjectService =
-                new SubjectServiceImpl(studyRecordRepository, subjectRepository, memberRepository);
-
         ShowTimerResponse response = subjectService.getTimer(member.getId());
 
-        List<ShowSubjectsResponse> expectedSubjects = Collections.singletonList(subjectResponse);
+        List<ShowSubjectsResponse> expectedSubjects = List.of(subjectResponse);
         List<ShowSubjectsResponse> actualSubjects = response.getSubjects();
 
         assertAll(
                 "response",
-                () -> assertEquals(todayStudyTime, response.getTime(), "Study time should match"),
+                () -> assertThat(response.getTime()).isEqualTo(todayStudyTime),
+                () -> assertTrue(expectedSubjects.size() == actualSubjects.size()),
                 () ->
-                        assertTrue(
-                                expectedSubjects.size() == actualSubjects.size()
-                                        && expectedSubjects
-                                                .get(0)
-                                                .getId()
-                                                .equals(actualSubjects.get(0).getId())
-                                        && expectedSubjects
-                                                .get(0)
-                                                .getName()
-                                                .equals(actualSubjects.get(0).getName()),
-                                "Subjects list should match"));
+                        assertThat(actualSubjects.get(0).getId())
+                                .isEqualTo(expectedSubjects.get(0).getId()),
+                () ->
+                        assertThat(actualSubjects.get(0).getName())
+                                .isEqualTo(expectedSubjects.get(0).getName()));
     }
 
     @Test
     void 타이머를_처음_조회_한다() {
         Member member = MemberFixture.builder().build();
         LocalDate todayDate = LocalDate.of(2024, 8, 9);
+        int todayStudyTime = 0;
+
         Subject subject = Subject.builder().id(1L).name("HTML").member(member).build();
         ShowSubjectsResponse subjectResponse =
-                new ShowSubjectsResponse(subject.getId(), subject.getName());
+                ShowSubjectsResponse.of(subject.getId(), subject.getName());
 
         given(memberRepository.existsById(member.getId())).willReturn(true);
         given(subjectRepository.findAllByMemberIdOrderByNameAsc(member.getId()))
                 .willReturn(Stream.of(subject));
-
-        SubjectServiceImpl subjectService =
-                new SubjectServiceImpl(studyRecordRepository, subjectRepository, memberRepository);
+        given(studyRecordRepository.findByDateAndMemberId(todayDate, member.getId()))
+                .willReturn(Optional.of(new StudyRecord(1L, todayStudyTime, todayDate, null)));
 
         ShowTimerResponse response = subjectService.getTimer(member.getId());
 
-        List<ShowSubjectsResponse> expectedSubjects = Collections.singletonList(subjectResponse);
+        List<ShowSubjectsResponse> expectedSubjects = List.of(subjectResponse);
         List<ShowSubjectsResponse> actualSubjects = response.getSubjects();
 
         assertAll(
                 "response",
-                () -> assertEquals(0, response.getTime(), "Study time should match"),
+                () -> assertThat(response.getTime()).isEqualTo(todayStudyTime),
+                () -> assertTrue(expectedSubjects.size() == actualSubjects.size()),
                 () ->
-                        assertTrue(
-                                expectedSubjects.size() == actualSubjects.size()
-                                        && expectedSubjects
-                                                .get(0)
-                                                .getId()
-                                                .equals(actualSubjects.get(0).getId())
-                                        && expectedSubjects
-                                                .get(0)
-                                                .getName()
-                                                .equals(actualSubjects.get(0).getName()),
-                                "Subjects list should match"));
+                        assertThat(actualSubjects.get(0).getId())
+                                .isEqualTo(expectedSubjects.get(0).getId()),
+                () ->
+                        assertThat(actualSubjects.get(0).getName())
+                                .isEqualTo(expectedSubjects.get(0).getName()));
     }
 
     @Test
@@ -115,9 +105,6 @@ public class SubjectServiceTest {
         Member member = MemberFixture.builder().build();
 
         given(memberRepository.existsById(member.getId())).willReturn(false);
-
-        SubjectServiceImpl subjectService =
-                new SubjectServiceImpl(studyRecordRepository, subjectRepository, memberRepository);
 
         WoohaengshiException thrown =
                 assertThrows(
